[gd_scene load_steps=10 format=3 uid="uid://pvme53alei54"]

[ext_resource type="Script" path="res://src/Comics.gd" id="1_3q5xi"]
[ext_resource type="Texture2D" uid="uid://cyc74l3qssis5" path="res://assets/menu/buttons/PNG/metalPanel_plate.png" id="2_75c3k"]
[ext_resource type="Texture2D" uid="uid://672hypw0i3x5" path="res://assets/menu/buttons/PNG/glassPanel_cornerTR.png" id="3_iu1i4"]
[ext_resource type="Texture2D" uid="uid://cgewwpq21dbk6" path="res://assets/menu/persons/Doctor.jpg" id="4_w3hx6"]
[ext_resource type="Texture2D" uid="uid://dnh4ak0d60jp5" path="res://assets/menu/arrowSilver_left.png" id="5_nnoe6"]
[ext_resource type="Texture2D" uid="uid://dfxhi2ej56hfn" path="res://assets/menu/arrowSilver_right.png" id="6_gj2gb"]
[ext_resource type="Texture2D" uid="uid://dtgqclir8g2xx" path="res://assets/menu/buttons/PNG/glassPanel_projection.png" id="7_6y7a5"]
[ext_resource type="AudioStream" uid="uid://cxrh2gmhaafvs" path="res://assets/sound/Клик в меню/Menu Selection Click.wav" id="9_g6yiv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_irt2t"]

[node name="Comics1" type="Node2D"]
script = ExtResource("1_3q5xi")

[node name="MetalPanelPlate" type="Sprite2D" parent="."]
position = Vector2(952, 538)
scale = Vector2(24.8875, 15.6375)
texture = ExtResource("2_75c3k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_irt2t")

[node name="GlassPanelCornerTr" type="Sprite2D" parent="."]
position = Vector2(973, 523.5)
scale = Vector2(23.26, 14.61)
texture = ExtResource("3_iu1i4")

[node name="Doctor" type="Sprite2D" parent="."]
position = Vector2(925, 400)
scale = Vector2(0.2187, 0.256247)
texture = ExtResource("4_w3hx6")

[node name="Label" type="Label" parent="."]
offset_left = 41.0
offset_top = 745.0
offset_right = 1874.0
offset_bottom = 1034.0
theme_override_font_sizes/font_size = 45
text = "-”Здарова стажер! У нас не хватает врачей, 
поэтому сегодня сразу выходишь на линию! 
Думаю тебя уже всему научили, в твоей ша-ра.. твоем мед.колледже.( хе-хе). 
Иди в гараж, там будет твой водитель и Ваш боевой конь.”"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="."]
offset_left = -9.0
offset_top = 301.0
offset_right = 353.0
offset_bottom = 577.0
icon = ExtResource("5_nnoe6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Push" type="Button" parent="."]
offset_left = 1567.0
offset_top = 301.0
offset_right = 1929.0
offset_bottom = 577.0
icon = ExtResource("6_gj2gb")
flat = true
icon_alignment = 1
expand_icon = true

[node name="pass" type="Button" parent="."]
offset_left = 54.0
offset_top = 24.0
offset_right = 316.0
offset_bottom = 244.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(0.188235, 0.513726, 0.709804, 1)
theme_override_font_sizes/font_size = 30
text = "Пропустить"
icon = ExtResource("7_6y7a5")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_g6yiv")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Push" to="." method="_on_push_pressed"]
[connection signal="pressed" from="pass" to="." method="_on_pass_pressed"]
